--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,6 @@
 <template>
-    <div class="container">
-        <ul class="nav navbar-nav navbar-fixed-top navbar-inverse">
-            <li repeat.for="navItem of router.navigation" class="${navItem.isActive ? 'active' : ''}">
-                <a href.bind="navItem.href">
-                    ${navItem.title}
-                </a>
-            </li>
-        </ul>
-    </div>
+    <require from="menu.html"></require>
+    <menu router.bind="router"></menu>
     <div class="page-host container" style="margin-top: 100px;">
         <router-view></router-view>
     </div>
