--- a/src/sobre.html
+++ b/src/sobre.html
@@ -1,10 +1,10 @@
 <template>
     <ul class="list-group">
-        <li class="list-group-item" repeat.for="p of posts">
-            <img src.bind="p.data.thumbnail" />
-            <a href="http://reddit.com${p.data.permalink}">
-        ${p.data.title}
-      </a>
+        <li class="list-group-item" repeat.for="p of about.dadosPessoais">
+            <label >Nome:</label>
+            ${p.firstName} 
+            <label for=""></label>
+            ${p.lastname} ${p.cidade} ${p.pais}
         </li>
     </ul>
 </template>
